--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     margin: 1% 5%;
-    background-image: url('../images/adromeda-galaxy-nasa.jpeg')
+    background-image: url("../images/adromeda-galaxy-nasa.jpeg")
 }
 
 main {
